# github-actions-test

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
cmakes/: linux.cmake  mac.cmake  raspi.cmake
include/: lib.h  lib.hpp
lib/: CMakeLists.txt  lib.cpp
sayhello/: CMakeLists.txt  lib.cpp
sayhellocapi/: CMakeLists.txt  c_api.h  lib.cpp
test/: CMakeLists.txt
