cmake_minimum_required(VERSION 3.10)

project(github-actions-sample)
set(VERSION_MAJOR   0   CACHE STRING "Project major version number.")
set(VERSION_MINOR   2   CACHE STRING "Project minor version number.")
set(VERSION_PATCH   0   CACHE STRING "Project patch version number.")
mark_as_advanced(VERSION_MAJOR VERSION_MINOR VERSION_PATCH)

if(DEFINED BUILD_TARGET)
    if (${BUILD_TARGET} STREQUAL RASPI)
        set(OS linux)
        include(cmakes/raspi.cmake)
    endif()
else()
    if(WIN32)
        set(OS win32)
        include(cmakes/win_vs.cmake)
    elseif(APPLE)
        set(OS macosx)
        include(cmakes/mac.cmake)
    else()
        set(OS linux)
        include(cmakes/linux.cmake)
    endif()
endif()

add_subdirectory(sayhello)
add_subdirectory(test)
