cmake_minimum_required(VERSION 3.10)

project(github-actions-sample)
set(VERSION_MAJOR   0   CACHE STRING "Project major version number.")
set(VERSION_MINOR   2   CACHE STRING "Project minor version number.")
set(VERSION_PATCH   3   CACHE STRING "Project patch version number.")
mark_as_advanced(VERSION_MAJOR VERSION_MINOR VERSION_PATCH)
 
if(WIN32)
    set(OS win32)
    include(cmakes/win_vs.cmake)
elseif(APPLE)
    set(OS macosx)
    include(cmakes/mac.cmake)
else()
    set(OS linux)
    if(DEFINED BUILD_TARGET)
        if (${BUILD_TARGET} STREQUAL ARM32)
            include(cmakes/arm32.cmake)
        elseif(${BUILD_TARGET} STREQUAL ARM64)
            include(cmakes/arm64.cmake)
        endif()
    endif()
endif()

add_subdirectory(sayhello)
add_subdirectory(sayhellocapi)
add_subdirectory(test)
